Add padding to top

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
         text-align: center;
       }
       h1 {
-        font-size: 80px;
+        font-size: 72px;
+      }
+      @media (min-width: 700px) {
+        body {
+          padding-top: 300px;
+        }
       }
     </style>
   </head>
