--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>You have done it.</title>
+    <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
     <style>
-      <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
       body {
         text-align: center;
       }
@@ -13,6 +13,7 @@
       @media (min-width: 700px) {
         body {
           padding-top: 300px;
+          text-align: center;
         }
       }
     </style>
