--- a/index.html
+++ b/index.html
@@ -5,29 +5,17 @@
     <title>You have done it.</title>
     <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
     <style>
-      body {
+      #message {
+        font-size: 72px;
+        width: 100%;
+        position: fixed;
+        top: 30%;
         text-align: center;
       }
-      h1 {
-        font-size: 72px;
-      }
-      @media (min-width: 700px) {
-        body {
-          padding-top: 250px;
-          text-align: center;
-        }
-      }
     </style>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-40336130-2', 'auto');
-      ga('send', 'pageview');
-    </script>
   </head>
   <body>
+    <h1 id="message"></h1>
     <script>
       var GREAT_JOBS = [
         'Great job',
@@ -66,17 +54,27 @@
         '真棒'
       ];
 
-      if (Math.random() < 0.1) {
-        setTimeout(function () {
-          window.location.href = 'http://idontfuckin.care';
-        }, 1000);
-      } else {
-        var candidates = GREAT_JOBS.concat(AWESOMES),
-            idx = Math.min(Math.random() * candidates.length | 0, candidates.length - 1),
-            msg = candidates[idx] + '!';
+      window.onload = function () {
+        if (Math.random() < 0.1) {
+          setTimeout(function () {
+            window.location.href = 'http://idontfuckin.care';
+          }, 100);
+        } else {
+          var candidates = GREAT_JOBS.concat(AWESOMES),
+              idx = Math.min(Math.random() * candidates.length | 0, candidates.length - 1),
+              msg = candidates[idx] + '!';
 
-        document.write('<h1>' + msg + '</h1>');
-      }
+          document.getElementById('message').innerHTML = msg;
+        }
+      };
+    </script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-40336130-2', 'auto');
+      ga('send', 'pageview');
     </script>
   </body>
 </html>
